# sipXcustomCallerId

./: .autotools  .classpath  .cproject  .project  Makefile.am  README  configure.ac  sipxcustomcallerid.spec.in
config-plugin/: Makefile.am
config-plugin/plugin/: CustomCallerIdMenu.html  CustomCallerIdMenu.page  CustomCallerIdMenu.properties  CustomCallerIdPage.html  CustomCallerIdPage.page  CustomCallerIdPage.properties
config-plugin/src/nl/telecats/customcid/: CustomCallerAlias.java  CustomCallerAliasCsv.java  CustomCallerIdManager.java  CustomCallerIdManagerImpl.java
config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: CustomCallerIdHook.java  CustomCallerIdMenu.java  CustomCallerIdPage.java
config-plugin/test/nl/telecats/customcid/: CustomCallerAliasCsvTest.java  CustomCallerIdManagerTest.java
proxy-plugin/src/: CallerID.cpp  CallerID.h  CallerMongoDBTest.cpp  Makefile.am
